Upgrade to Java 17 - Using Vector API for NNUE inference code